// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="d-flex mt-5 justify-content-around"
  >
    <h1>
      hi , here is your to-do list.
    </h1>
    <button
      class="btn btn-primary my-5 logout"
    >
      logout
    </button>
  </div>
  <form
    class="d-flex"
  >
    <input
      class="form-control input"
      placeholder="add todo"
      type="text"
      value=""
    />
    <button
      class="btn add"
    >
      add
    </button>
  </form>
  <table
    class="table mt-5"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          to-do:
        </th>
        <th
          scope="col"
        >
          edit
        </th>
        <th
          scope="col"
        >
          delete
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</DocumentFragment>
`;

exports[`matches snapshot 1 1`] = `
<DocumentFragment>
  <div
    class="my-5"
  >
    <div />
  </div>
  <div
    class="d-flex mt-5 justify-content-around"
  >
    <h1>
      hi , here is your to-do list.
    </h1>
    <button
      class="btn btn-primary my-5 logout"
    >
      logout
    </button>
  </div>
  <form
    class="d-flex"
  >
    <input
      class="form-control input"
      placeholder="add todo"
      type="text"
      value=""
    />
    <button
      class="btn add"
    >
      add
    </button>
  </form>
  <table
    class="table mt-5"
  >
    <thead>
      <tr>
        <th
          scope="col"
        >
          to-do:
        </th>
        <th
          scope="col"
        >
          edit
        </th>
        <th
          scope="col"
        >
          delete
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</DocumentFragment>
`;
